--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@
   max-width: 500px;
 }
 
+.inputEdit {
+  border: solid 1px rgba(255, 100, 170, 0.8);
+  border-radius: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 @media (min-width: 500px) {
   .screenToWidth {
     width: calc(500px * 0.34);
